--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,29 @@
 sudo: required
+
 language: generic
+
 service:
   - docker
+
 before_install:
   - echo "Start creating an image with dockerfile"
   - docker build -t bewisesh91/docker-react-app -f Dockerfile.dev .
+
 script:
   - docker run -e CI=ture bewisesh91/docker-react-app npm run test -- --coverage
 
 after_success:
   - echo "Test success"
+
+deploy:
+  provider: elasticbeanstalk
+  regiion: 'ap-northeast-2'
+  app: 'docker-react-app'
+  env: 'Dockerreactapp-env'
+  bucket_name: 'elasticbeanstalk-ap-northeast-2-627828904052'
+  bucket_path: 'docker-react-app'
+  on:
+    branch: master
+
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_ACCESS_KEY
